# virt16

./: .gitignore  README.md  arch.md
assembler/: asm.py  assemble.py  go.mod  hello.asm  test.asm
assembler/helpers/: parse_instructions.py  parser.py  store.py
fonts/: 2  LICENSE  PxPlus_IBM_EGA_8x8.virt16font  font.virt16font  font_to_bits.py
virt16-vm/: .gitignore  CMakeLists.txt  README.md  main.cpp
virt16-vm/vm/: virt16.cpp  virt16.h
vm/: Makefile  README.md  go.mod  imgui.ini  main.go  vm.go
